[package]
name = "ntpalert"
version = "0.1.1"
authors = ["colin <colin@graplsecurity.com>"]
edition = "2018"
description = "A simple utility to detect clock skew"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "ntpalert"

[dependencies]
sntpc = "0.2.0"
chrono = "0.4.11"
